--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
         link(rel="preconnect", href="https://fonts.googleapis.com")
         link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Titillium+Web:wght@400;600&display=swap")
-        link(rel="stylesheet", href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css")
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/@picocss/pico@1.4.3/css/pico.min.css")
         link(rel="stylesheet", href="/css/style.min.css")
 
         block header
